[gd_scene load_steps=9 format=3 uid="uid://enksprcwdhu8"]

[ext_resource type="Script" uid="uid://bp1k42oqhod6q" path="res://title_screen/main_menu.gd" id="1_qgaev"]
[ext_resource type="PackedScene" uid="uid://c4rbxieydn2a4" path="res://title_screen/wireframe_sub_space.tscn" id="2_2l1am"]
[ext_resource type="Theme" uid="uid://dgo5di4ew147w" path="res://engine/themes/title_screen.theme" id="3_wagcm"]
[ext_resource type="FontFile" uid="uid://5muhrw1dex5u" path="res://assets/UI/fonts/Ethnocentric Rg It.otf" id="4_tvhf2"]
[ext_resource type="Script" uid="uid://ck7f1l4fnromj" path="res://title_screen/multi_player_root.gd" id="5_ixeqr"]
[ext_resource type="Theme" uid="uid://cewdeyanue7xi" path="res://engine/themes/mp_lobby_theme.theme" id="6_h13ws"]
[ext_resource type="Script" uid="uid://b31c5uj03wnpn" path="res://title_screen/lobby_ui.gd" id="7_4md1n"]

[sub_resource type="ViewportTexture" id="ViewportTexture_dbuyn"]
viewport_path = NodePath("TextureRect/SubViewport")

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_qgaev")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1919.0
offset_bottom = 1086.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 1930.0
offset_bottom = 1090.0
scale = Vector2(1.0073, 1.0073)
texture = SubResource("ViewportTexture_dbuyn")

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = -10.0
offset_top = -10.0
offset_right = 2055.0
offset_bottom = 1272.0
color = Color(0, 0, 0, 0.576471)

[node name="SubViewport" type="SubViewport" parent="TextureRect"]
use_debanding = true
size = Vector2i(1920, 1080)

[node name="WireframeSubSpace" parent="TextureRect/SubViewport" instance=ExtResource("2_2l1am")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.14476, 0, 9.24166)

[node name="TitleLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = 113.0
offset_top = 223.0
offset_right = 1885.0
offset_bottom = 398.0
theme_override_fonts/normal_font = ExtResource("4_tvhf2")
theme_override_font_sizes/normal_font_size = 120
bbcode_enabled = true
text = "[center]SUB ROGUE[/center]"

[node name="TitleLabel2" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = 113.0
offset_top = 820.0
offset_right = 1885.0
offset_bottom = 995.0
theme_override_fonts/normal_font = ExtResource("4_tvhf2")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]Multiplayer stealth roguelike[/center]"

[node name="Label" type="Label" parent="."]
offset_right = 54.0
offset_bottom = 23.0
text = "FPS: 60"

[node name="MultiPlayerRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_ixeqr")

[node name="LobbySearchRoot" type="Control" parent="MultiPlayerRoot"]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LobbySearchBG" type="ColorRect" parent="MultiPlayerRoot/LobbySearchRoot"]
layout_mode = 0
offset_left = 645.0
offset_top = 388.0
offset_right = 1913.0
offset_bottom = 835.0
color = Color(0, 0, 0, 0.792157)

[node name="Host" type="Button" parent="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG"]
layout_mode = 2
offset_left = 910.0
offset_top = 344.0
offset_right = 1266.0
offset_bottom = 397.0
theme = ExtResource("3_wagcm")
text = "Host"

[node name="Refresh" type="Button" parent="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG"]
layout_mode = 2
offset_left = 910.0
offset_top = 266.0
offset_right = 1266.0
offset_bottom = 319.0
theme = ExtResource("3_wagcm")
text = "Refresh"

[node name="ScrollContainer" type="ScrollContainer" parent="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG"]
layout_mode = 2
offset_left = 40.0
offset_top = 84.0
offset_right = 948.0
offset_bottom = 420.0
theme = ExtResource("6_h13ws")
vertical_scroll_mode = 2

[node name="LobbyList" type="VBoxContainer" parent="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Button" type="Button" parent="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG/ScrollContainer/LobbyList"]
layout_mode = 2
text = "Not A Lobby"

[node name="LobbyNameLabel" type="Label" parent="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG"]
layout_mode = 0
offset_left = 41.0
offset_top = 26.0
offset_right = 189.0
offset_bottom = 49.0
theme = ExtResource("3_wagcm")
text = "Lobby Name"

[node name="LobbyNameLabel2" type="Label" parent="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG"]
layout_mode = 0
offset_left = 362.0
offset_top = 26.0
offset_right = 609.0
offset_bottom = 56.0
theme = ExtResource("3_wagcm")
text = "Num. Players"

[node name="LobbyNameLabel3" type="Label" parent="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG"]
layout_mode = 0
offset_left = 707.0
offset_top = 26.0
offset_right = 954.0
offset_bottom = 56.0
theme = ExtResource("3_wagcm")
text = "Private"

[node name="LobbyUI" type="Control" parent="MultiPlayerRoot"]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("6_h13ws")
script = ExtResource("7_4md1n")

[node name="ColorRect" type="ColorRect" parent="MultiPlayerRoot/LobbyUI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 48.6
anchor_bottom = 27.35
offset_right = -0.00012207
color = Color(0, 0, 0, 0.854902)

[node name="StartGame" type="Button" parent="MultiPlayerRoot/LobbyUI/ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1617.0
offset_top = 257.0
offset_right = 1855.0
offset_bottom = 379.0
text = "Start Game"

[node name="SetName" type="Button" parent="MultiPlayerRoot/LobbyUI/ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 890.0
offset_top = 198.0
offset_right = 1126.0
offset_bottom = 233.0
text = "Set Name"

[node name="Settings" type="Button" parent="MultiPlayerRoot/LobbyUI/ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1617.0
offset_top = 418.0
offset_right = 1855.0
offset_bottom = 540.0
text = "Settings"

[node name="LeaveLobby" type="Button" parent="MultiPlayerRoot/LobbyUI/ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 262.0
offset_top = 729.0
offset_right = 500.0
offset_bottom = 851.0
text = "Leave Lobby"

[node name="SteamUsername" type="Label" parent="MultiPlayerRoot/LobbyUI/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1723.0
offset_top = 203.0
offset_right = -88.0
offset_bottom = -868.0
grow_horizontal = 2
grow_vertical = 2
text = "Steam Username"

[node name="LobbyName" type="LineEdit" parent="MultiPlayerRoot/LobbyUI/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 574.0
offset_top = 199.0
offset_right = -1077.0
offset_bottom = -864.0
grow_horizontal = 2
grow_vertical = 2
text = "Lobby Name Goes Here"

[node name="PlayersLabel" type="Label" parent="MultiPlayerRoot/LobbyUI/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 262.0
offset_top = 203.0
offset_right = -1500.0
offset_bottom = -868.0
grow_horizontal = 2
grow_vertical = 2
text = "Players"

[node name="ChatInput" type="LineEdit" parent="MultiPlayerRoot/LobbyUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 569.0
offset_top = 820.0
offset_right = 1257.0
offset_bottom = 851.0
placeholder_text = "Write your message here"

[node name="SubmitMsg" type="Button" parent="MultiPlayerRoot/LobbyUI/ChatInput"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.968
offset_left = 750.0
offset_top = 1.0
offset_right = 323.0
offset_bottom = 5.992
grow_horizontal = 2
text = "Send message"

[node name="LobbyChatContainer" type="ScrollContainer" parent="MultiPlayerRoot/LobbyUI"]
layout_mode = 0
offset_left = 569.0
offset_top = 255.0
offset_right = 1574.0
offset_bottom = 788.0

[node name="LobbyChatRTL" type="RichTextLabel" parent="MultiPlayerRoot/LobbyUI/LobbyChatContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Heck"
fit_content = true

[node name="PlayerVBox" type="VBoxContainer" parent="MultiPlayerRoot/LobbyUI"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 0
offset_left = 261.0
offset_top = 257.0
offset_right = 516.0
offset_bottom = 297.0

[connection signal="button_up" from="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG/Host" to="MultiPlayerRoot" method="_on_host_button_up"]
[connection signal="button_up" from="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG/Refresh" to="MultiPlayerRoot" method="_on_refresh_button_up"]
[connection signal="button_up" from="MultiPlayerRoot/LobbyUI/ColorRect/StartGame" to="MultiPlayerRoot/LobbyUI" method="_on_start_game_button_up"]
[connection signal="button_up" from="MultiPlayerRoot/LobbyUI/ColorRect/SetName" to="MultiPlayerRoot/LobbyUI" method="_on_set_name_button_up"]
[connection signal="button_up" from="MultiPlayerRoot/LobbyUI/ColorRect/LeaveLobby" to="MultiPlayerRoot/LobbyUI" method="_on_leave_lobby_button_up"]
[connection signal="button_up" from="MultiPlayerRoot/LobbyUI/ChatInput/SubmitMsg" to="MultiPlayerRoot/LobbyUI" method="_on_submit_msg_button_up"]
